# FC-1

./: README.md
barometric-timer/: Cargo.toml  README.md
barometric-timer/.cargo/: config.toml
barometric-timer/scripts/: extract.py  test.py
barometric-timer/src/: main.rs  rom.rs  rp_2040_lib.rs
